fix(scrollbar): hide mobile scrollbar

--- a/src/scrollbar/style.scss
+++ b/src/scrollbar/style.scss
@@ -29,6 +29,11 @@
 .content-wrapper {
   width: 100%;
   height: 100%;
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+  }
 }
 
 .track {
